--- a/style/style.css
+++ b/style/style.css
@@ -128,6 +128,7 @@ body {
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
   gap: 2rem;
+  margin-bottom: 200px;
 }
 
 #root .btnContainer .btn {
