--- a/style/style.css
+++ b/style/style.css
@@ -254,7 +254,7 @@ body {
     font-size: 3rem;
     font-weight: 900;
     color: #fff;
-    text-align: right;
+    text-align: center;
     margin-bottom: 2.5rem;
   }
   #root .infoContainer .topPara,
