change color to  white

--- a/style/style.css
+++ b/style/style.css
@@ -103,7 +103,7 @@ body {
 #root .infoContainer .mainHeading {
   font-size: 10rem;
   font-weight: 900;
-  color: #333;
+  color: #fff;
   text-align: right;
   margin-bottom: 6rem;
 }
